<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/retryQuestion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/question"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/retryOptionA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/option_a"
        app:layout_constraintTop_toBottomOf="@id/retryQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/retryStatusA"
        android:text="@string/retry_status_a"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/retryOptionA"
        app:layout_constraintBottom_toBottomOf="@id/retryOptionA"
        app:layout_constraintStart_toEndOf="@id/retryOptionA"
        android:contentDescription="@string/image_describe_correct_or_wrong" />

    <Button
        android:id="@+id/retryOptionB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/option_b"
        app:layout_constraintTop_toBottomOf="@id/retryOptionA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/retryStatusB"
        android:text="@string/retry_status_b"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/retryOptionB"
        app:layout_constraintBottom_toBottomOf="@id/retryOptionB"
        app:layout_constraintStart_toEndOf="@id/retryOptionB"
        android:contentDescription="@string/image_describe_correct_or_wrong" />


    <Button
        android:id="@+id/retryOptionC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/option_c"
        app:layout_constraintTop_toBottomOf="@id/retryOptionB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/retryStatusC"
        android:text="@string/retry_status_c"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/retryOptionC"
        app:layout_constraintBottom_toBottomOf="@id/retryOptionC"
        app:layout_constraintStart_toEndOf="@id/retryOptionC"
        android:contentDescription="@string/image_describe_correct_or_wrong" />


    <Button
        android:id="@+id/retryOptionD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/option_d"
        app:layout_constraintTop_toBottomOf="@id/retryOptionC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/retryStatusD"
        android:text="@string/retry_status_d"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/retryOptionD"
        app:layout_constraintBottom_toBottomOf="@id/retryOptionD"
        app:layout_constraintStart_toEndOf="@id/retryOptionD"
        android:contentDescription="@string/image_describe_correct_or_wrong" />

    <Button
        android:id="@+id/retryBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/retryOptionD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
