<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_0s"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/quizText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/question"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="12dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3" />

    <Button
        android:id="@+id/optionA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:padding="12dp"
        android:text="@string/this_is_options_for_the_question"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:backgroundTint="#4CAF50"
        app:layout_constraintTop_toBottomOf="@id/quizText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/statusA"
        app:layout_constraintHorizontal_weight="1" />

    <ImageView
        android:id="@+id/statusA"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/optionA"
        app:layout_constraintBottom_toBottomOf="@id/optionA"
        app:layout_constraintStart_toEndOf="@id/optionA"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/image_describe_correct_or_wrong" />


    <Button
        android:id="@+id/optionB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:padding="12dp"
        android:text="@string/this_is_options_for_the_question"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:backgroundTint="#4CAF50"
        app:layout_constraintTop_toBottomOf="@id/optionA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/statusB"
        app:layout_constraintHorizontal_weight="1" />

    <ImageView
        android:id="@+id/statusB"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/optionB"
        app:layout_constraintBottom_toBottomOf="@id/optionB"
        app:layout_constraintStart_toEndOf="@id/optionB"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/image_describe_correct_or_wrong" />

    <Button
        android:id="@+id/optionC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:padding="12dp"
        android:text="@string/this_is_options_for_the_question"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:backgroundTint="#4CAF50"
        app:layout_constraintTop_toBottomOf="@id/optionB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/statusC"
        app:layout_constraintHorizontal_weight="1" />

    <ImageView
        android:id="@+id/statusC"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/optionC"
        app:layout_constraintBottom_toBottomOf="@id/optionC"
        app:layout_constraintStart_toEndOf="@id/optionC"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/image_describe_correct_or_wrong" />


    <Button
        android:id="@+id/optionD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:padding="12dp"
        android:text="@string/this_is_options_for_the_question"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:backgroundTint="#4CAF50"
        app:layout_constraintTop_toBottomOf="@id/optionC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/statusD"
        app:layout_constraintHorizontal_weight="1" />

    <ImageView
        android:id="@+id/statusD"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/optionD"
        app:layout_constraintBottom_toBottomOf="@id/optionD"
        app:layout_constraintStart_toEndOf="@id/optionD"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/image_describe_correct_or_wrong" />


    <Button
        android:id="@+id/submitNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#9D7CD8"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusD" />


</androidx.constraintlayout.widget.ConstraintLayout>
